# carbontracker

./: .gitignore  404.html  CNAME  LICENSE  MANIFEST.in  README.md  extending_carbontracker.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: build.yml  deploy-docs.yml  publish-pypi.yml  publish.yml  test.yml
carbontracker/: __version__.py  carbontracker.py  cli.py  constants.py  exceptions.py  logger.py  loggerutil.py  monitoring.py  parser.py  predictor.py  profiler.py  report.py  tracker.py
carbontracker/components/: component.py  handler.py
carbontracker/components/apple_silicon/: powermetrics.py
carbontracker/components/cpu/: cpu.py  generic.py  intel.py  intel_rapl.py  sim_cpu.py
carbontracker/components/gpu/: gpu.py  nvidia.py  sim_gpu.py
carbontracker/data/: carbon-intensities.csv  cpu_power.csv
carbontracker/emissions/conversion/: co2eq.csv  co2eq.py
carbontracker/emissions/data/: carbon-intensity-electricity.csv
carbontracker/emissions/intensity/: fetcher.py  intensity.py  location.py
carbontracker/emissions/intensity/api/: carbonintensitygb.py  co2signal.py  intensity_api.py
carbontracker/emissions/intensity/fetchers/: carbonintensitygb.py  co2signal.py  electricitymaps.py  energidataservice.py
docs/: getting-started.md  index.md  parsing.md
docs/documentation/: CLI.md  CarbonTracker.md  Log Parsing.md
documentation/CLI/: index.html
documentation/CarbonTracker/: index.html
documentation/Log Parsing/: index.html
getting-started/: index.html
parsing/: index.html
scripts/: create_carbon_intensity_csv.py
tests/: test.py  test2.py  test_api.py  test_cli.py  test_component.py  test_exceptions.py  test_handler.py  test_loggerutil.py  test_model.py  test_parser.py  test_predictor.py  test_tracker.py
tests/components/: test_apple_silicon.py  test_generic_cpu.py  test_intel.py  test_nvidia.py  test_sim_cpu.py  test_sim_gpu.py
tests/emissions/: test_co2eq.py
tests/intensity/: test_carbonintensitygb.py  test_electricitymaps.py  test_energidataservice.py  test_fetcher.py  test_intensity.py
