[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "carbontracker"
description = "Tracking and predicting the carbon footprint of training deep learning models."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [
    { name = "Lasse F. Wolff Anthony", email = "lfwa@proton.me" },
    { name = "Benjamin Kanding" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = ["requests", "numpy", "pandas", "geocoder", "pynvml", "psutil", "importlib-metadata", "py-cpuinfo"]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/lfwa/carbontracker"
repository = "https://github.com/lfwa/carbontracker"

[tool.setuptools]
packages = ['carbontracker']

[tool.setuptools_scm]

[project.optional-dependencies]
test = ["pyfakefs"]
docs = ["mkdocs", "mkdocstrings[python]"]

[project.scripts]
carbontracker = "carbontracker.cli:main"

