[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "carbontracker"
description = "Tracking and predicting the carbon footprint of training deep learning models."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [
    { name = "Lasse F. Wolff Anthony", email = "lfwa@proton.me" },
    { name = "Benjamin Kanding" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    "numpy",
    "pandas",
    "geocoder",
    "pynvml",
    "psutil",
    "importlib-metadata",
    "py-cpuinfo",
    "matplotlib",
    "seaborn",
    "reportlab<4.0.0"  # Pin to a version compatible with Python 3.7
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/lfwa/carbontracker"
repository = "https://github.com/lfwa/carbontracker"

[tool.setuptools]
packages = ['carbontracker']

[tool.setuptools_scm]

[project.optional-dependencies]
test = [
    "pyfakefs==4.5.1; python_version < '3.10'",  # For Python 3.7-3.9
    "pyfakefs==5.8.0; python_version >= '3.10'"   # For Python 3.10+
]
docs = ["mkdocs", "mkdocstrings[python]"]

[project.scripts]
carbontracker = "carbontracker.cli:main"

